--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,15 @@ tauri-build = { version = "1.0.4", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.5", features = ["api-all"] }
+tokio-tungstenite = "*"
+tokio = { version = "1", features = ["full"] }
+tokio-util = { version = "0.7.0", features = ["full"] }
+tokio-stream = { version = "0.1" }
+futures-channel = "0.3"
+futures-util = "0.3.8"
+http = "0.2.2"
+url = { version = "2", features = ["serde"] }
+async-std = { version = "1", features = ["attributes", "tokio1"] }
 
 [features]
 # by default Tauri runs in production mode
