--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ futures-util = "0.3.8"
 http = "0.2.2"
 url = { version = "2", features = ["serde"] }
 async-std = { version = "1", features = ["attributes", "tokio1"] }
+rust-crypto = "^0.2"
 
 [features]
 # by default Tauri runs in production mode
