--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ http = "0.2.2"
 url = { version = "2", features = ["serde"] }
 async-std = { version = "1", features = ["attributes", "tokio1"] }
 rust-crypto = "^0.2"
+dotenv = "0.15.0"
 
 [features]
 # by default Tauri runs in production mode
